fix alignment of custom-downbar

--- a/src/components/Home/Order/Order.scss
+++ b/src/components/Home/Order/Order.scss
@@ -6,8 +6,8 @@
 
 .custom-downbar{
   height: 50%;
-  border-start-start-radius: 25px;
-  border-start-end-radius: 25px;
+  border-end-start-radius: 25px;
+  border-end-end-radius: 25px;
   .p-sidebar-header{
     padding: 0.2rem !important;
     .p-sidebar-icons{
